# vibe_tide_mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml  vibe_tide_mcp_server.py
vibe_tide_mcp_app/: README.md  main.ts  mcp-app.html  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
vibe_tide_mcp_app/VibeTideMin/: ServiceWorker.js  index.html  manifest.webmanifest
vibe_tide_mcp_app/VibeTideMin/StreamingAssets/: appconfig.json
vibe_tide_mcp_app/src/: mcp-app.ts  styles.css
